syntax = "proto3";

package weather;

option go_package = "weather";

service WeatherService {
    rpc Get(WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
    string city = 1;
    string country = 2;
}

message WeatherResponse {
    float temperature = 1;
    string city = 2;
}

// Demo
//message GeoPosition {
//    float latitude = 1;
//    float longitude = 2;
//}